# FastNic

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini
src/: main.py
src/core/: config.py  logging.py  models.py  openapi.py  schemas.py
src/database/: crud.py  session.py
src/picnic/: session.py
src/routers/dealicious/: controller.py  views.py
src/routers/health/: controller.py  views.py
src/routers/orders/: controller.py  views.py
src/routers/recipes/: controller.py  views.py
