[tool.poetry]
name = "FastNic"
version = "0.1.0"
description = "A fastAPI api to store recipes and order automatically through Picnic"
authors = ["Oscar Vesterink"]
readme = "README.md"
packages = [{include = "fastapi_picnic_api"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.2"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
requests-toolbelt = "^1.0.0"
requests = "^2.31.0"
python-picnic-api = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
pytest = "^7.4.2"
isort = "^5.12.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
pytest-env = "^1.0.1"
pylint = "^3.0.1"
requests-mock = "^1.11.0"
types-requests = "^2.31.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
